--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "androidhive.info.materialdesign"
+        applicationId "com.contest.mobathon"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
