--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 repositories {
     maven { url "https://jitpack.io" }
@@ -28,5 +33,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.github.rey5137:material:1.1.1'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.2'
-
+    compile 'org.codehaus.jackson:jackson-mapper-lgpl:1.9.13'
 }
